--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.mainBox {
+  margin: 2% 40% 2% 35% ;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 8px;
+  max-width: 300px;
+  background-color: pink;
+  border-radius: 1%;
+  border-width: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+input {
+  grid-column: span 4;
+  width: 100%;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 1%;
+  border-width: 10px;
+  background-color: yellow;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  width: 100px;
+  padding: 10px;
+  font-size: 20px;
+  height: 50px;
+  border-radius: 20px;
+  background-color: cyan;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+  border: 2px solid aquamarine;
+  border-radius: 20px;
+  color: blueviolet;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
